<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rateActivity"
    android:orientation="vertical"
    android:padding="20dp">





    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/rmb_hint"
        android:gravity="center"
        android:padding="20dp"
        android:inputType="numberDecimal"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/show"
         />

    <Button
        android:id="@+id/btnD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:text="@string/dollar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:text="@string/euro"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:text="@string/won"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:onClick="openOne"
        android:text="Config" />

</LinearLayout>