<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".teamActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">



            <TextView
                android:id="@+id/text11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="27sp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:text="@string/t1" />

            <TextView
                android:id="@+id/text12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sc" />

            <Button
                android:id="@+id/btn13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="btnAdd3"
                android:text="@string/s3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="btnAdd2"
                android:text="@string/s2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:onClick="btnAdd3"
                android:text="@string/s1"
                android:textSize="20sp" />




        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">



            <TextView
                android:id="@+id/text21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="27sp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:text="@string/t2" />

            <TextView
                android:id="@+id/text22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sc" />

            <Button
                android:id="@+id/btn23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="btnAdd3"
                android:text="@string/s3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="btnAdd2"
                android:text="@string/s2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:onClick="btnAdd1"
                android:text="@string/s1"
                android:textSize="20sp" />




        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:textSize="23sp" />


</RelativeLayout>